# ableton-mcp

./: .env.example  README.md  pyproject.toml
.cursor/skills/ableton-mcp/: SKILL.md
AbletonMCP_Remote_Script/: __init__.py
MCP_Server/: browser_tools.py  extended_tools.py  phase2_tools.py  phase3_tools.py  phase4_tools.py  serum_manifest.py  serum_tools.py  server.py
docs/: FEATURE_GAP.md  SERUM2_SETUP.md  SETUP_OTHER_MACHINE.md  serum2_params_128.json
scripts/: install_remote_script.py
