[project]
name = "ableton-mcp"
version = "1.6.0"
description = "Ableton Live MCP server — fork of ahujasid/ableton-mcp for Suno → Ableton → DistroKid pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "David Shibley"},
    {name = "Siddharth Ahuja", email = "ahujasid@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ableton-mcp = "MCP_Server.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["MCP_Server"]

[project.urls]
"Homepage" = "https://github.com/David-J-Shibley/ableton-mcp"
"Repository" = "https://github.com/David-J-Shibley/ableton-mcp"
"Upstream" = "https://github.com/ahujasid/ableton-mcp"
"Bug Tracker" = "https://github.com/David-J-Shibley/ableton-mcp/issues"